[project]
name = "optician"
requires-python = ">=3.12"
version = "1.1.1"
description = "Sync your data warehouse tables to Looker"
authors = [{ name = "GetGround", email = "bi@getground.co.uk" }]
license = "MIT"
repository = "https://github.com/getground/optician"
keywords = ["optician", "looker", "sync", "lookml", "dbt", "data warehouse"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta"
]

dependencies = [
"PyGithub>=2.3.0",
"google-cloud-bigquery>=3.10.0",
]

[project.optional-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
optician = "optician.cli.commands:cli"
